--- a/docs/r-references.bib
+++ b/docs/r-references.bib
@@ -1433,3 +1433,84 @@ Cattell Scree Test},
   pages = {1--20},
   url = {http://www.jstatsoft.org/v21/i12/},
 }
+
+@article{campbell,
+  title={Convergent and discriminant validation by the multitrait-multimethod matrix.},
+  author={Campbell, Donald T and Fiske, Donald W},
+  journal={Psychological bulletin},
+  volume={56},
+  number={2},
+  pages={81},
+  year={1959},
+  publisher={American Psychological Association}
+}
+
+@article{seow2025,
+	title = {Metacognitive biases in anxiety-depression and compulsivity extend across perception and memory},
+	author = {Seow, Tricia X. F. and Fleming, Stephen. M. and Hauser, Tobias U.},
+	editor = {Jacquet, Pierre Olivier},
+	year = {2025},
+	month = {03},
+	date = {2025-03-05},
+	journal = {PLOS Mental Health},
+	pages = {e0000259},
+	volume = {2},
+	number = {3},
+	doi = {10.1371/journal.pmen.0000259},
+	url = {https://dx.plos.org/10.1371/journal.pmen.0000259},
+	langid = {en}
+}
+
+@article{katyal2025,
+	title = {Distorted learning from local metacognition supports transdiagnostic underconfidence},
+	author = {Katyal, Sucharit and Huys, Quentin JM and Dolan, Raymond J. and Fleming, Stephen M.},
+	year = {2025},
+	date = {2025},
+	journal = {Nature Communications},
+	pages = {1854},
+	volume = {16},
+	number = {1},
+	url = {https://www.nature.com/articles/s41467-025-57040-0},
+	note = {Publisher: Nature Publishing Group UK London}
+}
+
+@article{spitzer2006,
+	title = {A Brief Measure for Assessing Generalized Anxiety Disorder: The GAD-7},
+	author = {Spitzer, Robert L. and Kroenke, Kurt and Williams, Janet B. W. and {Löwe}, Bernd},
+	year = {2006},
+	month = {05},
+	date = {2006-05-22},
+	journal = {Archives of Internal Medicine},
+	pages = {1092},
+	volume = {166},
+	number = {10},
+	doi = {10.1001/archinte.166.10.1092},
+	url = {http://archinte.jamanetwork.com/article.aspx?doi=10.1001/archinte.166.10.1092},
+	langid = {en}
+}
+
+@article{mohr2024,
+	title = {Information search under uncertainty across transdiagnostic psychopathology and healthy ageing},
+	author = {Mohr, Greta and Ince, Robin A. A. and Benwell, Christopher S. Y.},
+	year = {2024},
+	month = {09},
+	date = {2024-09-03},
+	journal = {Translational Psychiatry},
+	pages = {353},
+	volume = {14},
+	number = {1},
+	doi = {10.1038/s41398-024-03065-w},
+	note = {PMID: 39227371
+PMCID: PMC11372192},
+	langid = {eng}
+}
+@Article{R-lmerTest,
+  title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
+  author = {Alexandra Kuznetsova and Per B. Brockhoff and Rune H. B. Christensen},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {82},
+  number = {13},
+  pages = {1--26},
+  doi = {10.18637/jss.v082.i13},
+}
